<resources>
    <string name="app_name">Cheesecake Utilities</string>
    <string name="bin_hex_title">BIN/HEX CONVERTER</string>
    <string name="bin_hex_title_full">Binary/Hex Converter</string>
    <string name="bin_hex_hint_enter_message">ENTER MESSAGE:</string>
    <string name="bin_hex_hint_click_paste">(Click and hold to paste)</string>
    <string name="bin_hex_header_choose_options">CHOOSE OPTIONS:</string>
    <string name="bin_hex_opt_bin">Bin</string>
    <string name="bin_hex_opt_hex">Hex</string>
    <string name="bin_hex_opt_delimiter">Delimiter</string>
    <string name="bin_hex_opt_encode">Encode</string>
    <string name="bin_hex_opt_decode">Decode</string>
    <string name="bin_hex_btn_translate">TRANSLATE!</string>
    <string name="bin_hex_hint_translation">TRANSLATION:</string>
    <string name="bin_hex_btn_copy">COPY</string>
    <string name="bin_hex_btn_send_caps">SEND</string>
    <string name="bin_hex_btn_clear">CLEAR</string>
    <string name="msg_spam_title">Message Spam</string>
    <string name="msg_spam_btn_send">Send</string>
    <string name="msg_spam_btn_contacts">Contacts</string>
    <string name="msg_spam_hint_number_times">Number of Times to Send:</string>
    <string name="msg_spam_hint_message">Message:</string>
    <string name="msg_spam_hint_contact_number">Contact Phone Number:</string>
    <string name="htc_sn_id_serial_field_hint">Enter Serial Number</string>
    <string name="htc_sn_id_button_phone_serial">Use Phone Serial</string>
    <string name="htc_sn_id_btn_search">Search</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_about">About</string>
    <string name="title_activity_general_settings">Settings</string>
    <string name="pref_hint_util_visibility">Hide/Show Utility</string>
    <string name="pref_hint_util_lock">Lock/Unlock utility</string>
    <string name="dialog_authenticated">Authenticated</string>
    <string name="dialog_cancelled">Authentication cancelled</string>
    <string name="pref_header_general">General</string>
    <string name="link_updates">https://github.com/itachi1706/CheesecakeUtilities/releases/latest</string>
    <string name="link_legacy">https://github.com/itachi1706/CheesecakeUtilities/releases</string>
    <string name="ff_compat_query_placeholder">Querying…</string>
    <string name="ff_compat_lbl_stories_count">Stories Count:&#160;</string>
    <string name="ff_compat_lbl_folder_size">Folder Size:&#160;</string>
    <string name="ff_compat_lbl_db_location">DB Location:&#160;</string>
    <string name="ff_compat_lbl_fanfic_folder">FanFic Folder:&#160;</string>
    <string name="ff_compat_title">Fanfiction Compactor</string>
    <string name="ff_compat_btn_compact_stories">Compact Stories</string>
    <string name="ff_compat_btn_show_stories_list">Show Stories List</string>
    <string name="ff_compat_result_fanfic_folder_size">%1$s (%2$d bytes)</string>
    <string name="ff_compat_result_fanfic_story_count">DB: %1$d stories | SD: %2$d stories</string>
    <string name="ff_compat_btn_dup_scan">Scan for Duplicates</string>
    <string name="camera_disable_desc">Allows Cheesecake Utilities to control the device\'s camera</string>
    <string name="camera_disable_explaination">This allows the app to control whether or not the camera on the device should be disabled</string>
    <string name="camera_disable_explaination_disclosure">In order to control the camera capabilities of the device, it requires the use of a Device Administrator Policy that grants the capability to enable or disable the camera capabilities of the device.\n\nIf you still wish to continue, click the \"Grant Permission\" button. Otherwise click the \"Cancel\" button to return to the main screen</string>
    <string name="camera_disable_disclosure_title">Device Administrator Policy Usage Disclosure</string>
    <string name="camera_disable_disclosure_grant">Grant Permission</string>
    <string name="camera_disable_admin_receiver_status">Device Admin Status: %1$s</string>
    <string name="camera_disable_enabled">Enabled</string>
    <string name="camera_disable_disabled">Disabled</string>
    <string name="camera_disable_enable">Enable</string>
    <string name="camera_disable_disable">Disable</string>
    <string name="camera_disable_device_admin_status">%1$s Device Admin</string>
    <string name="camera_disable_camera_status">%1$s Camera</string>
    <string name="camera_disable_camera_status_notification">Camera %1$s</string>
    <string name="camera_disable_device_admin_label">Camera Restriction</string>
    <string name="camera_disable_device_admin_disable_warning">You are about to disable this device administrator. Camera Blocking capabilities will be disabled</string>
    <string name="camera_disable_retrieving_status">Retrieving…</string>
    <string name="camera_disable_device_admin_status_label">Device Admin Status:</string>
    <string name="camera_disable_camera_status_label">Camera Status</string>
    <string name="camera_disable_disabled_toast">Device Administrator Disabled</string>
    <string name="camera_disable_enabled_toast">Device Administrator Enabled</string>
    <string name="camera_disable_enabled_message">You are now able to control the camera capabilities of your device.\n\nNote: If you wish to revoke the Device Administrator permission from the app, simply click on the \"Disable Device Admin\" button</string>
    <string name="sys_info_CPU1">Processor</string>
    <string name="sys_info_CPU2">CPU Type</string>
    <string name="sys_info_CPU3">CPU Instructions</string>
    <string name="sys_info_CPU4">CPU MAX</string>
    <string name="sys_info_CPU5">CPU MIN</string>
    <string name="sys_info_CPU6">CPU FREQ</string>
    <string name="sys_info_CPU7">CPU CORES</string>
    <string name="sys_info_OS1">Operating System</string>
    <string name="sys_info_OS2">OS Codename</string>
    <string name="sys_info_OS3">OS Info</string>
    <string name="sys_info_OS4">Up time:</string>
    <string name="sys_info_OS5">Advanced Android Features</string>
    <string name="sys_info_battery1">Battery Statistics</string>
    <string name="sys_info_batteryBarText">Level Indicator</string>
    <string name="sys_info_battery_charging">Charging</string>
    <string name="sys_info_battery_discharging">Discharging</string>
    <string name="sys_info_battery_full">Full</string>
    <string name="sys_info_battery_health">"Health: "</string>
    <string name="sys_info_battery_health_dead">Dead</string>
    <string name="sys_info_battery_health_fail">Failure</string>
    <string name="sys_info_battery_health_good">Good</string>
    <string name="sys_info_battery_health_over_h">Over Heat</string>
    <string name="sys_info_battery_health_over_v">Over Voltage</string>
    <string name="sys_info_battery_health_unknown">Unknown</string>
    <string name="sys_info_battery_level">"Level: "</string>
    <string name="sys_info_battery_not_charging">Not Charging</string>
    <string name="sys_info_battery_plug">"Charge Method: "</string>
    <string name="sys_info_battery_status">"Status: "</string>
    <string name="sys_info_battery_temp">"Temperature: "</string>
    <string name="sys_info_battery_voltage">"Voltage: "</string>
    <string name="sys_info_device1">Hardware</string>
    <string name="sys_info_device2">Device Info</string>
    <string name="sys_info_display1">Display</string>
    <string name="sys_info_display2">Resolution: Unsupported Android Version</string>
    <string name="sys_info_display3">Physical Size: Unsupported Android Version</string>
    <string name="sys_info_gpu_clock_adreno">GPU Clock: %s</string>
    <string name="sys_info_gpu_clock_mali">GPU Clock: %s</string>
    <string name="sys_info_gpu_clock_max_adreno">GPU Clock Maximum: %s</string>
    <string name="sys_info_gpu_clock_max_mali">GPU Clock Maximum: %s</string>
    <string name="sys_info_gpu_ext">Extensions list</string>
    <string name="sys_info_gpu_extensions">GLES Extensions</string>
    <string name="sys_info_gpu_gles_version">"OpenGL ES: "</string>
    <string name="sys_info_gpu_info">GPU Info</string>
    <string name="sys_info_gpu_mhz">" MHz"</string>
    <string name="sys_info_gpu_title">GPU Information</string>
    <string name="sys_info_gpu_vendor">"GPU Vendor: "</string>
    <string name="sys_info_java1">Java VM</string>
    <string name="sys_info_java2">Java VM Info</string>
    <string name="sys_info_memory1">Memory</string>
    <string name="sys_info_memory2">Note: Total RAM seen here may be different than advertised due to shared GPU memory.</string>
    <string name="sys_info_memory3">Total RAM:</string>
    <string name="sys_info_memory4">Free RAM:</string>
    <string name="sys_info_network1">Network Info</string>
    <string name="sys_info_network2">IP Address:</string>
    <string name="sys_info_network3">MAC Address:</string>
    <string name="sys_info_network4">SSID:</string>
    <string name="sys_info_sensors1">Sensors</string>
    <string name="sys_info_storage1">Device Storage</string>
    <string name="sys_info_storage2">Internal</string>
    <string name="sys_info_storage3">SD Card(s)</string>
    <string name="sys_info_storage4">Internal Storage</string>
    <string name="sys_info_title_section1">System</string>
    <string name="sys_info_title_section2">Device</string>
    <string name="sys_info_title_section3">Battery</string>
    <string name="sys_info_title_section4">Network</string>
    <string name="sys_info_title_section5">Sensors</string>
    <string name="sys_info_title_section6">GPU</string>
    <string name="sys_info_title_section7">Storage</string>
    <string name="sys_info_codename">Android OS: %s</string>
    <string name="sys_info_uptime">Uptime: %s</string>
    <string name="sys_info_cpucores">CPU Cores: %s</string>
    <string name="sys_info_cpufreq">Current Frequency: %s</string>
    <string name="nav_bar_image">Navigation Bar image</string>
    <string name="nav_bar_activate_svc">Activate Navigation Bar Service</string>
    <string name="nav_bar_activate_svc_app_name">Show current Application Name</string>
    <string name="nav_bar_activate_svc_clock">Show Clock</string>
    <string name="nav_bar_activate_svc_image">Color Navigation Bar Background</string>
    <string name="nav_bar_activate_svc_type">Background Type</string>
    <string name="nav_bar_activate_svc_static_color">Choose Static Color</string>
    <string name="list_app_desc_app_icon">App Icon</string>
    <string name="list_app_backup">Backup</string>
    <string name="list_app_launch">Launch</string>
    <string name="list_app_menu_show_sys_apps">Show System Apps</string>
    <string name="list_app_menu_sort_api">Sort by API Version</string>
    <string name="list_app_menu_graph">Graph by API</string>
    <string name="list_app_menu_clean_dir">Clean Ghost Directories</string>
    <string name="list_app_menu_generate_package_list">Generate App List</string>
    <string name="list_app_menu_app_settings">App Settings</string>
    <string name="list_app_menu_view_store">View in Play Store</string>
    <string name="list_app_menu_copy_sig">Copy Signature</string>
    <string name="list_app_menu_view_cert">View Certificate Info</string>
    <string name="list_app_menu_uninstall_apk">Uninstall App</string>
    <string name="list_app_menu_share_apk">Share APK File</string>
    <string name="msl_goodbye">Due to recent decisions by the MSL Team to close down the service, this will no longer be operational and we have henceforth retired this utilty. To view the message from the developers click on the \"Why\" button\n\nYou can also export your existing data by clicking on the \"Export\" button (Android KitKat and above only)</string>
    <string name="msl_why">Why Removed?</string>
    <string name="msl_export">Export Data</string>
    <string name="ellipsis">…</string>
    <string name="util_retired">Utility Retired</string>
</resources>