<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_list_applications_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.itachi1706.cheesecakeutilities.Modules.ListApplications.ListApplicationsDetailActivity">

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/layout_creator"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/list_app_desc_app_icon"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/iv_icon"
                android:layout_toEndOf="@+id/iv_icon"
                android:layout_centerVertical="true">

                <TextView
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/appName"
                    android:text="@string/ellipsis" />

                <TextView
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/appVersion"
                    android:text="@string/ellipsis" />
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:gravity="end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/list_app_backup"
                android:id="@+id/btnBackup" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/list_app_launch"
                android:id="@+id/btnLaunch" />
        </LinearLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/gridLayout"
            android:columnCount="2">

        </GridLayout>
    </LinearLayout>

</ScrollView>
